# oefaf-platform

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  _build_notebooks.py  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cricat/: __init__.py
cricat/grid_modeling/: __init__.py  reserve.py
cricat/load_forecasting/: __init__.py  forecaster.py
cricat/notebooks/: cricat_ercot_capacity_scenario.ipynb  cricat_pjm_load_forecast_replication.ipynb
cricat/scenarios/: __init__.py  builder.py
cricat/scenarios/fixtures/: CRICAT-SCN-12ed1945.json  CRICAT-SCN-9c425fd7.json  CRICAT-SCN-c0e81b3b.json  README.md
cricat/tests/: __init__.py  test_fixture_model_id.py  test_forecaster.py  test_reserve.py  test_scenarios.py
docs/api/: README.md
docs/architecture/: overview.md
docs/architecture/diagrams/: cricat.mmd  gea.mmd  platform_overview.mmd  sdmac.mmd
docs/data_inventory/: sources.md
docs/governance/: charter_draft.md
docs/validation_roadmap/: cricat.md  gea.md  overview.md  sdmac.md
docs/wireframes/: cricat_grid_stress_monitor.mmd  gea_disruption_monitor.mmd  sdmac_public_portal.mmd  wireframes.md
gea/: __init__.py
gea/ingestion/: __init__.py  loaders.py
gea/notebooks/: gea_event_scoring_walkthrough.ipynb
gea/scoring/: __init__.py  scorer.py
gea/tests/: __init__.py  test_schema_conformance.py  test_scoring.py
sdmac/: __init__.py
sdmac/api/: __init__.py  export_openapi.py  main.py  models.py  openapi.yaml  store.py
sdmac/manifests/: cricat-grid-modeling.yaml  cricat-load-forecasting.yaml  gea-scoring.yaml  sdmac-api.yaml  shared-utilities.yaml
sdmac/notebooks/: oefaf_governance_pipeline.ipynb  sdmac_api_demo.ipynb  sdmac_schema_validation_demo.ipynb
sdmac/schema_registry/: capacity_allocation_scenario.yaml  load_forecast_record.yaml  module_manifest.yaml  supply_disruption_event.yaml
sdmac/tests/: __init__.py  test_api.py  test_probability_of_stress_sync.py
shared/: __init__.py
shared/data_sources/: sources.yaml
shared/utilities/: __init__.py  io.py  schema_loader.py  synthetic_data.py
(+13 files in other folders)
